--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
 <link href="images/favicon.png" rel="icon" />
 <title>Sabor China</title>
-<meta name="description" content="Callum is responsive bootstrap 5 one page personal portfolio html template.">
+<meta name="description" content="Mejor Comida China de Humacao">
 <meta name="author" content="harnishdesign.net">
 
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900' type='text/css'>
