--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 			<div class="col-lg-10 mx-auto text-center">
         <h1 class="text-2000 text-white fw-1000 mb-0 text-uppercase ">Sabor China</h1>
         <div class="typed-strings">
-          <p>Comida China</p>
-          <p>Humacao</p>
           <p>(787) 852-6609</p>
+          <p>Comida China</p>
+          <p>(939) 244-1823</p>
         </div>
         <h2 class="text-23 text-white fw-600 text-uppercase mb-0 ms-n1"><span class="typed"></span></h2>
         <p class="text-5 text-light">Humacao, Puerto Rico.</p>
@@ -96,7 +96,7 @@
               <h3 class="text-5">Pollo al ajillo</h3>
               <h3 class="text-5">Pollo enchilado</h3>
               <h3 class="text-5">Carne Frita</h3>
-              <h3 class="text-5">Cordón Blue (6)</h3>
+              <h3 class="text-5">Cordón Blue (5)</h3>
               <h3 class="text-5">Costilla sin hueso</h3>
             </div>
           </div>
@@ -162,35 +162,16 @@
         <div class="row">
           <div class="col-lg-5 text-center text-lg-start wow fadeInUp">
             <h2 class="text-10 fw-600 mb-5">Conectate con nosotros</h2>
-            <p class="text-5 mb-5">Gracias por visitar nuesta pagina. Si tienen pregunta, mandanos un mensaje!</p>
+            <p class="text-5 mb-5">Gracias por visitar nuesta pagina.</p>
             <h3 class="text-5 fw-600">Locacion:</h3>
             <address class="text-4">
             Humacao, Puerto Rico
             </address>
             <h3 class="text-5 fw-600">Telefono:</h3>
             <p class="text-4">(787) 852 6609</p>
+            <p class="text-4">(939) 244-1823</p>
+
           </div>
-          <div class="col-lg-6 ms-auto mt-5 mt-lg-0 wow fadeInUp" data-wow-delay="0.3s">
-            <h2 class="text-10 fw-600 text-center text-lg-start mb-5">Subjecto:</h2>
-            <form id="contact-form" class="form-border" action="php/mail.php" method="post">
-              <div class="row g-4">
-                <div class="col-12">
-                  <label class="form-label" for="name">Nombre:</label>
-                  <input id="name" name="name" type="text" class="form-control py-1" required >
-                </div>
-                <div class="col-12">
-                  <label class="form-label" for="email">Coreo Electronico:</label>
-                  <input id="email" name="email" type="email" class="form-control py-1" required >
-                </div>
-                <div class="col-12">
-                  <label class="form-label" for="form-message">Pregunta:</label>
-                  <textarea id="form-message" name="form-message" class="form-control py-1" rows="4" required ></textarea>
-                </div>
-                <div class="col-12 text-center text-lg-start">
-                  <button id="submit-btn" class="btn btn-dark rounded-0" type="submit">Send <span class="ms-3"><i class="fas fa-arrow-right"></i></span></button>
-                </div>
-              </div>
-            </form>
           </div>
         </div>
       </div>
