--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="true" aria-controls="flush-collapseOne"> A que hora ceramos? </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#faqTopics">
-                  <div class="accordion-body"> Ceramos a la 9:30p.m. </div>
+                  <div class="accordion-body"> Cerramos a la 9:30p.m. </div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -138,16 +138,16 @@
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#faqTopics">
                   <div class="accordion-body">
-                    <p>Estamos abierto todo los dia.</p>
+                    <p>Estamos abierto todo los días.</p>
                   </div>
                 </div>
               </div>
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree"> Se puede ordernal por telefono? </button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree"> Se puede ordernar por telefono? </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#faqTopics">
-                  <div class="accordion-body"> Si, se puede orderal por telefono, se puede recoger en persona y por servicarro</div>
+                  <div class="accordion-body"> Si, se puede orderar por telefono, se puede recoger en persona y por servicarro</div>
                 </div>
               </div>
             </div>
